--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,22 +1,26 @@
 html { height: 100% }
 body { height: 100%; margin:0; padding:0; background-color:#003;}
+a:link, a:visited { color:#666; background:none;}
+a:hover { color:#fff; background:none;}
+
 #header {
   background-color:#006;
   color:#fff;
   width:100%;
   height:50px;
 }
-#header #logo { width:33%; float:left; padding:5px; }
-#header #logo h1 { font-size:18px; margin:0; }
-#header #logo h2 { font-size:14px; margin:0; font-weight:normal; }
 #header #zip-search { margin: 0 auto; float:left; }
 input.helper-text {
 	color: #666;
 }
-#map_canvas { width:100%; height:85%;}
+
+#logo { width:33%; float:left; padding:5px; }
+#logo h1 { font-size:18px; margin:0; }
+#logo h2 { font-size:14px; margin:0; font-weight:normal; }
+
 #footer {
   padding: 8px;
-  background-color:#003;
+  background-color:#333;
   color: #fff;
   width:100%;
   text-align:center;
@@ -24,8 +28,25 @@ input.helper-text {
   bottom:0;
   left:0;
 }
-a:link, a:visited { color:#666; background:none;}
-a:hover { color:#fff; background:none;}
+
+#sidebar {
+	float: left;
+	width: 300px;
+	min-height: 400px;
+	border: 1px solid #000;
+	-webkit-border-radius: 15px;
+	-moz-border-radius: 15px;
+	border-radius: 15px;
+	margin: 15px;
+	padding: 10px;
+}
+
+#sidebar ul#markers_list {
+	list-style: none;
+	padding: 0;
+}
+
+#map_canvas { width:100%; height:85%;}
 
 #map-container {
   padding: 6px;
