--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Portland Mass Times - Mass Times for Catholic Churches near Portland, Oregon</title>
   <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
+  <%= javascript_include_tag :defaults, 'rails.js' %>
   <%= csrf_meta_tag %>
 </head>
 <body>
