--- a/app/views/masses/_form.html.erb
+++ b/app/views/masses/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@mass) do |f| %>
+<%= form_for([@parish, @mass]) do |f| %>
   <% if @mass.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@mass.errors.count, "error") %> prohibited this mass from being saved:</h2>
@@ -13,15 +13,15 @@
 
   <div class="field">
     <%= f.label :day %><br />
-    <%= f.text_field :day %>
+    <%= f.select :day, Date::DAYNAMES.zip((0..6).to_a) %>
   </div>
   <div class="field">
-    <%= f.label :time %><br />
-    <%= f.text_field :time %>
+    <%= f.label :start_time %><br />
+    <%= f.text_field :start_time %>
   </div>
   <div class="field">
-    <%= f.label :type %><br />
-    <%= f.text_field :type %>
+    <%= f.label :notes %><br />
+    <%= f.text_field :notes %>
   </div>
   <div class="actions">
     <%= f.submit %>
