--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -45,21 +45,31 @@ input.helper-text {
 	list-style: none;
 	padding: 0;
 }
+#sidebar ul#markers_list li a {
+	display: block;
+	padding: 0.25em 0.5em;
+	text-decoration: none;
+}
+#sidebar ul#markers_list li a:hover {
+	color: #000;
+	background-color: #ddd;
+}
 
 #map_canvas { width:100%; height:85%;}
 
 #map-container {
-  padding: 6px;
+/*  padding: 6px;
   border-width: 1px;
   border-style: solid;
   border-color: #ccc #ccc #999 #ccc;
   -webkit-box-shadow: rgba(64, 64, 64, 0.5) 0 2px 5px;
   -moz-box-shadow: rgba(64, 64, 64, 0.5) 0 2px 5px;
-  box-shadow: rgba(64, 64, 64, 0.1) 0 2px 5px;
-  width: 800px;
+  box-shadow: rgba(64, 64, 64, 0.1) 0 2px 5px;*/
+/*  width: 800px;*/
 }
 
 #gmaps4rails_map {
-  width: 800px;
-  height: 400px;
+/*  width: 800px;*/
+  width: 1000px;
+  height: 600px;
 }
